# ImgTools

./: .gitignore  CMakeLists.txt  LICENSE
shader/: ColorBalance.hlsl  GenerateNormalTexture.hlsl  HueSaturation.hlsl  LUT3D.hlsl  LinearDodgeColor.hlsl  LinearDodgeImage.hlsl  LinearResize.hlsl  NormalMapConvertorRGB2DA.hlsl
src/: CubeLUT.cpp  CubeLUT.h  CubeLUT.hpp  Image.h  Image.hpp  ImageTools.hpp  ItConfig.hpp  ItDirect3D.hpp  ItEvent.hpp  ItException.hpp  ItGui.hpp  ItLog.hpp  ItSerialization.hpp  ItText.hpp  ItTool.hpp  ItToolUI.hpp  ItUtility.hpp  Media.hpp  Shader_GenerateNormalTexture.h  Shader_LUT3D.h  Shader_LinearDodgeColor.h  Shader_LinearDodgeImage.h  Shader_NormalMapConvertorRGB2DA.h  String.h  main.cpp
